test-result/files/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/duname: filesservice
    sas.com/version: 2.10.1
  name: files
spec:
  gateways:
  - convoy-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /files
    - uri:
        prefix: /files/
    route:
    - destination:
        host: files.va40.svc.cluster.local
